--- a/server/package.json
+++ b/server/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "nodemon": "^2.0.15",
     "pg": "^8.7.1"
   }
 }
